<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/favorites_item_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/titleDivider"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginStart="9dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitleContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:text="title content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtUserTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/txtTitleContent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintStart_toEndOf="@id/txtUserTitle"
        app:layout_constraintTop_toBottomOf="@id/txtTitleContent"
        tools:text="user name" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTrendingDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/trending_date_time"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/cardView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTrendingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="29dp"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtTrendingDate"
        tools:text="2020-02-02" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="29dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>